--- a/src/App.css
+++ b/src/App.css
@@ -5433,10 +5433,6 @@ input[type=submit].btn-block {
     content: "\E111"
 }
 
-.typcn-user-outline:before {
-    content: "\E112"
-}
-
 .typcn-user:before {
     content: "\E113"
 }
@@ -7004,7 +7000,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-default .navbar-brand {
     width: 165px;
     height: 37px;
-    /* background: url(`{process.env.PUBLIC_URL}$'/images/logo-4079ab3e00541e812b6ad0489fbdc6f9523fc1e190151ea3f592d669803fc495.png'`) no-repeat; */
+    background: url('/images/logo-4079ab3e00541e812b6ad0489fbdc6f9523fc1e190151ea3f592d669803fc495.png') no-repeat;
     background-size: contain;
     margin-top: 8px
 }
@@ -10473,29 +10469,29 @@ li.sample-categories {
     margin-bottom: 15px
 }
 
-/* .cell-avatar.extractor {
-    background-image: url(extractor-e63ae8e45e1545a4714d96a35e39f1e0.svg)
+ .cell-avatar.extractor {
+    background-image: url('/images/extractor-e63ae8e45e1545a4714d96a35e39f1e0.svg')
 }
 
 .cell-avatar.topic {
-    background-image: url(topic-d244d84738e80b9cca950c2cc6127971.svg)
+    background-image: url('/images/topic-d244d84738e80b9cca950c2cc6127971.svg')
 }
 
 .cell-avatar.sentiment {
-    background-image: url(sentiment-c6456ad4f14377dad8d51e1f0e9a4679.svg)
+    background-image: url('/images/sentiment-c6456ad4f14377dad8d51e1f0e9a4679.svg')
 }
 
 .cell-avatar.intent {
-    background-image: url(intent-8aeb28fb1eea4fefd0a084439e6937a3.svg)
+    background-image: url('/images/intent-8aeb28fb1eea4fefd0a084439e6937a3.svg')
 }
 
-.cell-avatar.twitter {
+/* .cell-avatar.twitter {
     background-image: url(twitter-f58c861dd52d2f65724437bffb686654.svg)
 }
 
 .cell-avatar.news {
     background-image: url(news-c6499bbd55d22c2d4533c9b826256ae8.svg)
-} */
+}  */
 
 .module-options {
     float: right;
@@ -11868,12 +11864,12 @@ body {
 }
 
 .container-body {
-    margin-left: 0;
-    margin-right: 0;
+    /* margin-left: 0;
+    margin-right: 0; */
     padding-top: 30px;
     width: auto;
-    padding-left: 0;
-    padding-right: 0
+    /* padding-left: 0;
+    padding-right: 0 */
 }
 
 .container-body .nav-main {
@@ -12016,12 +12012,13 @@ html.tabs body.not-loading {
 }
 
 .tail-spinner {
-    /* background: url(tail-spin-e6dd62ce03bf7b716a29ed2a9c082bca.svg); */
+    background-image: url("/images/tail-spin-e6dd62ce03bf7b716a29ed2a9c082bca.svg");
     background-size: 58px 58px;
     width: 58px;
     height: 58px;
     margin: auto;
-    margin-top: 300px
+    margin-top: 300px;
+    background-repeat: no-repeat;
 }
 
 .training-spinner {
