--- a/src/App.css
+++ b/src/App.css
@@ -14463,7 +14463,7 @@ h4.tree-template-name {
 
 .module-create-flatten .module-type {
     margin: auto;
-    width: 21.5%;
+    width: 578px;
 }
 
 .module-create-flatten .module-type .panel-body {
