--- a/src/App.css
+++ b/src/App.css
@@ -9667,19 +9667,19 @@ li.danger.disabled>a:hover {
 }
 
 .category-tag.with-samples-25 {
-    background-image: linear-gradient(left, #f5f5f5, #f5f5f5 25%, transparent 0, transparent)
+    background-image: linear-gradient(#f5f5f5, #f5f5f5 25%, transparent 0, transparent)
 }
 
 .category-tag.with-samples-50 {
-    background-image: linear-gradient(left, #f5f5f5, #f5f5f5 50%, transparent 0, transparent)
+    background-image: linear-gradient(#f5f5f5, #f5f5f5 50%, transparent 0, transparent)
 }
 
 .category-tag.with-samples-75 {
-    background-image: linear-gradient(left, #f5f5f5, #f5f5f5 75%, transparent 0, transparent)
+    background-image: linear-gradient( #f5f5f5, #f5f5f5 75%, transparent 0, transparent)
 }
 
 .category-tag.with-samples-100 {
-    background-image: linear-gradient(left, #f5f5f5, #f5f5f5 100%, transparent 0, transparent 0)
+    background-image: linear-gradient( #f5f5f5, #f5f5f5 100%, transparent 0, transparent 0)
 }
 
 .category-tag i {
@@ -9757,19 +9757,19 @@ li.danger.disabled>a:hover {
 }
 
 .category-tag.category-selected.with-samples-25 {
-    background-image: linear-gradient(left, #2a87e8, #2a87e8 25%, transparent 0, transparent)
+    background-image: linear-gradient(#2a87e8, #2a87e8 25%, transparent 0, transparent)
 }
 
 .category-tag.category-selected.with-samples-50 {
-    background-image: linear-gradient(left, #2a87e8, #2a87e8 50%, transparent 0, transparent)
+    background-image: linear-gradient(#2a87e8, #2a87e8 50%, transparent 0, transparent)
 }
 
 .category-tag.category-selected.with-samples-75 {
-    background-image: linear-gradient(left, #2a87e8, #2a87e8 75%, transparent 0, transparent)
+    background-image: linear-gradient(#2a87e8, #2a87e8 75%, transparent 0, transparent)
 }
 
 .category-tag.category-selected.with-samples-100 {
-    background-image: linear-gradient(left, #2a87e8, #2a87e8 100%, transparent 0, transparent 0)
+    background-image: linear-gradient(#2a87e8, #2a87e8 100%, transparent 0, transparent 0)
 }
 
 .category-tag.category-selected .text {
@@ -12252,7 +12252,7 @@ html.tabs body.not-loading {
 }
 
 .active-learning-divide {
-    background-image: linear-gradient(right, #f5f7fa, #f5f7fa 381px, transparent 0, transparent);
+    background-image: linear-gradient( #f5f7fa, #f5f7fa 381px, transparent 0, transparent);
     background-color: #fff
 }
 
