--- a/src/App.css
+++ b/src/App.css
@@ -14942,7 +14942,6 @@ h4.tree-template-name {
 
 .table-preview-flatten {
     background-color: #fff;
-    display: inherit;
     display: block;
     overflow-x: auto;
     border-radius: 6px;
@@ -19375,3 +19374,138 @@ form#advanced-options-form .button-row {
 .flag-icon-zw.flag-icon-squared {
     background-image: url(zw-aada5e263d915efa06e06b6e050ea4a4.svg)
 } */
+
+/* Draggable Ui */
+  
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .drag-container {
+    max-width: 1000px;
+    margin: 20px auto;
+  }
+  
+  .drag-list {
+    display: flex;
+    align-items: flex-start;
+  }
+  @media (max-width: 690px) {
+    .drag-list {
+      display: block;
+    }
+  }
+  
+  .drag-column {
+    flex: 1 1;
+    margin: 0 10px;
+    position: relative;
+    background: #fff;
+    overflow: hidden;
+    box-shadow: 0 2px 4px 0 rgba(6, 21, 33, .04), 0 0 2px 0 rgba(16, 25, 32, .03);
+    border-radius: 6px;
+    border: 1px solid gainsboro;
+  }
+  @media (max-width: 690px) {
+    .drag-column {
+      margin-bottom: 30px;
+    }
+  }
+  .drag-column h2 {
+    font-size: 1.5rem;
+    margin: 5px auto;
+    text-transform: uppercase;
+    font-weight: inherit;
+  }
+  
+  .drag-column-header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    box-shadow: 0 2px 4px 0 rgba(0, 136, 255, .34);
+    background-color: #08f;
+    color: #fff
+  }
+  
+  .drag-inner-list {
+    min-height: 50px;
+  }
+  
+  .drag-item {
+    margin: 20px;
+    height: 43px;
+    text-align: center;
+    border-radius: 6px;
+    background: #f5f5f585;
+    border: 1px solid gainsboro;
+    box-shadow: 0 2px 4px 0 rgba(6, 21, 33, .04), 0 0 2px 0 rgba(16, 25, 32, .03);
+    cursor: pointer;
+    font-size: 15px;
+  }
+  .drag-item.is-moving {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5);
+    background: rgba(0, 0, 0, 0.8);
+  }
+  
+  .drag-header-more {
+    cursor: pointer;
+  }
+  
+  .drag-options {
+    position: absolute;
+    top: 44px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    opacity: 0;
+    transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  .drag-options.active {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+    opacity: 1;
+  }
+  .drag-options-label {
+    display: block;
+    margin: 0 0 5px 0;
+  }
+  .drag-options-label input {
+    opacity: 0.6;
+  }
+  .drag-options-label span {
+    display: inline-block;
+    font-size: 0.9rem;
+    font-weight: 400;
+    margin-left: 5px;
+  }
+  
+  /* Dragula CSS  */
+  .gu-mirror {
+    position: fixed !important;
+    margin: 0 !important;
+    z-index: 9999 !important;
+    opacity: 0.8;
+    list-style-type: none;
+  }
+  
+  .gu-hide {
+    display: none !important;
+  }
+  
+  .gu-unselectable {
+    -webkit-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
+  }
+  
+  .gu-transit {
+    opacity: 0.2;
+  }
