--- a/src/App.css
+++ b/src/App.css
@@ -14398,7 +14398,7 @@ h4.tree-template-name {
 
 .module-create-flatten .progress-global {
     border-radius: 0;
-    margin-top: -30px;
+    /* margin-top: -30px; */
     margin-left: -32px;
     background-color: #f5f7fa
 }
