--- a/src/App.css
+++ b/src/App.css
@@ -10612,6 +10612,11 @@ h4.tree-template-name {
     color: #2b3e51
 }
 
+.query-col {
+    overflow-y: scroll;
+    height: 0;
+}
+
 .module-test-api .query-col,
 .module-test-api .result-col {
     width: 50%;
@@ -10622,7 +10627,7 @@ h4.tree-template-name {
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     min-height: 400px;
-    padding: 42px 48px
+    padding: 25px 30px;
 }
 
 .module-test-api .query-col.wide {
@@ -10631,15 +10636,16 @@ h4.tree-template-name {
     float: none
 }
 
-.module-test-api .query-col .text-form textarea {
+.module-test-api .query-col .text-form input {
     font-size: 17px;
     padding: 13px 16px;
     color: #333;
     box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, .05);
     border: 1px solid #ddd;
     resize: none;
-    height: 220px
+    height: 30px
 }
+
 
 .module-test-api .query-col .text-form textarea.extractor {
     height: 213px
@@ -10780,7 +10786,7 @@ h4.tree-template-name {
 }
 
 .module-test-api .result-col .table-view-results {
-    padding: 42px 48px;
+    padding: 25px 45px;
     font-family: Roboto Mono
 }
 
